--- a/src/my_components/header.scss
+++ b/src/my_components/header.scss
@@ -25,8 +25,11 @@
   }
   nav{
     margin-top: 30px;
-    ul{
+    .menu{
       justify-content: space-around;
+      li{
+        width: fit-content;
+      }
     }
   }
 }
@@ -39,7 +42,7 @@
     .logo{
     width: 100px;
     }
-    nav ul{
+    .menu{
       justify-content: space-between;
     }
   }
@@ -65,7 +68,7 @@
       .menu{
         flex-direction: column;
         li a{
-          line-height: calc( (100vw - 320px) / (575 - 320) * (35 - 30) + 30px );
+          line-height: calc( (100vw - 320px) / (575 - 320) * (45 - 35) + 35px );
           &:hover{
             border-bottom: 2px solid $yellow;
             font-weight: 500;
