--- a/src/my_components/heading-block.scss
+++ b/src/my_components/heading-block.scss
@@ -6,11 +6,10 @@
   justify-content: space-between;
   .heading-title{
     text-transform: uppercase;
-    color: #ffffff;
     padding-left: calc( (100vw - 320px) / (1800 - 320) * (28 - 15) + 15px );
     position: relative;
     strong{
-      color: $yellow;
+      color: #ffffff;
     }
     &:before{
       content: "";
@@ -22,6 +21,18 @@
     	top: 10%;
     	left: 0;
       background: $yellow;
+    }
+  }
+  .heading-button{
+    width: fit-content;
+    color: $black;
+    margin-left: calc( (100vw - 320px) / (1800 - 320) * (47 - 15) + 15px );
+    padding: calc( (100vw - 320px) / (1800 - 320) * (15 - 10) + 10px ) calc( (100vw - 320px) / (1800 - 320) * (40 - 25) + 25px );
+    font-weight: 500;
+    font-size: calc( (100vw - 320px) / (1800 - 320) * (14 - 12) + 12px );
+    background-color: #f1ce39;
+    &:hover{
+      background-color: #f9dd65;
     }
   }
   .heading-link{
@@ -48,64 +59,64 @@
       margin-left: 2%;
     }
   }
-  .icon-circle{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: calc( (100vw - 320px) / (1800 - 320) * (35 - 28) + 28px );
-    height: calc( (100vw - 320px) / (1800 - 320) * (35 - 28) + 28px );
-    border-radius: 50%;
-    border: 1px solid $yellow;
-  }
-  i{
-    color: $yellow;
-    font-size: calc( (100vw - 320px) / (1800 - 320) * (15 - 13) + 13px );
-  }
 }
 .main-banner-left{
-  .heading-block{
-    .heading-title{
-      padding-left: calc( (100vw - 320px) / (1800 - 320) * (47 - 15) + 15px );
-      &:before{
-      	width: calc( (100vw - 320px) / (1800 - 320) * (8 - 4) + 4px );
-      }
-      h1{
-      	font-size: calc( (100vw - 320px) / (1800 - 320) * (48 - 20) + 20px );
-        line-height: calc( (100vw - 320px) / (1800 - 320) * (73 - 31) + 31px );
-        font-weight: bold;
-      }
-    }
-    .heading-text{
-      color: #ffffff;
-      padding-left: calc( (100vw - 320px) / (1800 - 320) * (47 - 15) + 15px );
-    	font-size: calc( (100vw - 320px) / (1800 - 320) * (16 - 12) + 12px );
-    }
-    .heading-button{
-      width: fit-content;
-      color: $black;
-      margin-left: calc( (100vw - 320px) / (1800 - 320) * (47 - 15) + 15px );
-    	padding: calc( (100vw - 320px) / (1800 - 320) * (15 - 10) + 10px ) calc( (100vw - 320px) / (1800 - 320) * (40 - 25) + 25px );
-    	font-weight: 500;
-      font-size: calc( (100vw - 320px) / (1800 - 320) * (14 - 12) + 12px );
-    	background-color: #f1ce39;
-      &:hover{
-        background-color: #f9dd65;
-      }
+  .heading-title{
+    padding-left: calc( (100vw - 320px) / (1800 - 320) * (47 - 15) + 15px );
+    &:before{
+    	width: calc( (100vw - 320px) / (1800 - 320) * (8 - 4) + 4px );
     }
   }
+  h1{
+    font-size: calc( (100vw - 320px) / (1800 - 320) * (48 - 20) + 20px );
+    line-height: calc( (100vw - 320px) / (1800 - 320) * (73 - 31) + 31px );
+    font-weight: bold;
+    color: $yellow;
+  }
+  .heading-text{
+    color: #ffffff;
+    padding-left: calc( (100vw - 320px) / (1800 - 320) * (47 - 15) + 15px );
+  	font-size: calc( (100vw - 320px) / (1800 - 320) * (16 - 12) + 12px );
+  }
 }
-.top-heading-block{
-  background-color: $black;
+.schedule{
+  .heading-block{
+    justify-content: space-around;
+  }
+}
+.team{
+  .heading-block{
+    justify-content: space-around;
+  }
 }
 .mc-heading{
-  background: url(../images/blog-banner.png) no-repeat;
-  background-position: 100% 0;
+  .heading-block{
+    flex-direction: row;
+    align-items: center;
+    background: url(../img/mc-banner.png) no-repeat;
+    background-position: 50% 0;
+  }
+  .content-wrapper{
+    height: auto;
+  }
 }
 
 @media screen and (max-width: 900px) {
   .heading-text{
     span {
         display: none;
+    }
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .mc-heading{
+    .heading-block{
+      flex-direction: column;
+      align-items: flex-start;
+      .heading-button{
+        margin: 30px 0 0;
+      }
     }
   }
 }
