--- a/src/my_components/heading-block.scss
+++ b/src/my_components/heading-block.scss
@@ -30,6 +30,7 @@
     padding: calc( (100vw - 320px) / (1800 - 320) * (15 - 10) + 10px ) calc( (100vw - 320px) / (1800 - 320) * (40 - 25) + 25px );
     font-weight: 500;
     font-size: calc( (100vw - 320px) / (1800 - 320) * (14 - 12) + 12px );
+    text-transform: uppercase;
     background-color: #f1ce39;
     &:hover{
       background-color: #f9dd65;
@@ -94,7 +95,7 @@
     flex-direction: row;
     align-items: center;
     background: url(../img/mc-banner.png) no-repeat;
-    background-position: 50% 0;
+    background-position: 50% 40%;
   }
   .content-wrapper{
     height: auto;
@@ -103,7 +104,7 @@
 .wide-heading{
   .heading-block{
     background: url(../img/mc-banner.png) no-repeat;
-    background-position: 58% 0;
+    background-position: 58% 40%;
     .heading-note{
       margin-top: 30px;
     }
